# parlitesc-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
include/: Window.hpp
src/: CMakeLists.txt  Window.cpp  main.cpp
